# photo-editing-analysis

./: .gitignore  README.md  analysis.py  plot-folder-comparison.sh  plot-raw-vs-edited.sh  plot.sh  pyproject.toml
photography_analysis/: __main__.py  data.py
photography_analysis/plots/: __init__.py  metadata.py  sessions.py  time_between_photos.py
src/photography_analysis/: __main__.py  immich_data.py
src/photography_analysis/dashboard/: app.py  config.py  data_fetcher.py
src/photography_analysis/dashboard/pages/: people.py
src/photography_analysis/plots/: __init__.py  metadata.py  people_heatmap.py  sessions.py
